Fix slider layout issues on mobile devices
The margin-top: -54px on #slider caused some weird layout issues on
mobile devices so we have to fake the background-color with a pseudo
element.

--- a/less/layouts.less
+++ b/less/layouts.less
@@ -6,8 +6,9 @@
 #footer {
 	background: #fff ~"url(images/content-orange-line.png)" repeat-x;
 	border-radius: 0 0 5px 5px;
-	padding: (@gutterWidth + 20px) @gutterWidth @gutterWidth;
 	box-shadow: 1px 1px 10px fade(@black, 10%);
+	padding: @gutterWidth @gutterWidth @gutterWidth;
+	position: relative;
 }
 
 #main {
@@ -32,7 +33,7 @@
 
 #footer {
 	background-color: #f8fafb;
-	text-shadow: 1px 1px 0 #fff;
+	text-shadow: 1px 1px 0 @white;
 	padding-top: @gutterWidth;
 	margin: @gutterWidth 0;
 	position: relative;
